# gather_cxi_counters

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEI.md  README.md  SECURITY.md  counter_aggregation.cpp  counter_aggregation.h  counter_collection.cpp  counter_collection.h  main.cpp  main.h  metric_registry.cpp  metric_registry.h  metric_source.h  metric_source_nccl.cpp  metric_source_nccl.h  metric_source_nic.cpp  metric_source_nic.h  metric_source_perf.cpp  metric_source_perf.h  utils.cpp  utils.h  zmq_transfer.cpp  zmq_transfer.h
nccl_profiler/: CMakeLists.txt  nccl_counters.h  nccl_profiler.cc
nccl_profiler/nccl/: common.h  err.h  profiler.h
